--- a/templates/nature.html
+++ b/templates/nature.html
@@ -22,7 +22,7 @@
 
     {% for post in posts %}
     <div class="card max-width-1  flex font-1" >
-        <img src=" https://source.unsplash.com/1600x900/?{{post.heading}} " alt="coding" class="postimg">
+        <img src=" {{post.img.url}} " alt="coding" class="postimg">
         <div class="title ">
             <h2> {{post.heading}} <h2>
             
